--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "files.associations": {
         "memory.h": "c",
         "common.h": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "value.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
